--- a/.github/workflows/ci-portal.yml
+++ b/.github/workflows/ci-portal.yml
@@ -8,7 +8,20 @@ jobs:
       - name: Node
         uses: actions/setup-node@v4
         with: { node-version: '20' }
-      - run: npm ci --workspace apps/app-web || true
-      - run: npm run build --workspace apps/app-web || true
+      - name: Install deps (app-web)
+        run: npm ci --workspace apps/app-web || true
+      - name: Build (app-web)
+        run: npm run build --workspace apps/app-web || true
+      - name: Audit dependencies (npm audit)
+        run: npm audit --workspace apps/app-web || true
+      - name: License report
+        run: npx --yes license-checker --production --summary || true
+      - name: Pull core docs (optional)
+        env:
+          CORE_REPO: ${{ vars.CORE_REPO || 'https://github.com/<org>/core' }}
+        run: |
+          echo "Syncing core docs from ${CORE_REPO}"
+          git clone --depth=1 "$CORE_REPO" tmp-core || exit 0
+          mkdir -p apps/app-web/content/core
+          rsync -a tmp-core/docs/ apps/app-web/content/core/ || true
       - run: echo "lint/test placeholders"
-
