--- a/.github/workflows/ci-portal.yml
+++ b/.github/workflows/ci-portal.yml
@@ -18,8 +18,9 @@ jobs:
         run: npx --yes license-checker --production --summary || true
       - name: Pull core docs (optional)
         env:
-          CORE_REPO: ${{ vars.CORE_REPO || 'https://github.com/<org>/core' }}
+          CORE_REPO: ${{ vars.CORE_REPO }}
         run: |
+          CORE_REPO="${CORE_REPO:-https://github.com/lichtara/core}"
           echo "Syncing core docs from ${CORE_REPO}"
           git clone --depth=1 "$CORE_REPO" tmp-core || exit 0
           mkdir -p apps/app-web/content/core
