Add core mandala content and markdown rendering
Added 'mandala-agents.md' and 'mandala-petalas.md' to core content. Updated MarkdownView to use unified, remark, and rehype for secure markdown parsing and rendering. Registered new dependencies in package.json. Improved homepage navigation with direct links to new mandala content. Updated CI workflow to upload core content as an artifact.

--- a/.github/workflows/ci-portal.yml
+++ b/.github/workflows/ci-portal.yml
@@ -26,3 +26,10 @@ jobs:
           mkdir -p apps/app-web/content/core
           rsync -a tmp-core/docs/ apps/app-web/content/core/ || true
       - run: echo "lint/test placeholders"
+      - name: Upload core content artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: core-content
+          path: |
+            apps/app-web/content/core
