--- a/apps/app-web/package.json
+++ b/apps/app-web/package.json
@@ -7,6 +7,13 @@
     "dev": "echo dev placeholder",
     "build": "echo build placeholder",
     "start": "echo start placeholder"
+  },
+  "dependencies": {
+    "remark": "^15.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.0",
+    "rehype-stringify": "^10.0.0",
+    "rehype-sanitize": "^6.0.0",
+    "unified": "^11.0.5"
   }
 }
-
