--- a/apps/app-web/package.json
+++ b/apps/app-web/package.json
@@ -14,6 +14,9 @@
     "remark-rehype": "^11.1.0",
     "rehype-stringify": "^10.0.0",
     "rehype-sanitize": "^6.0.0",
+    "remark-slug": "^7.0.1",
+    "github-slugger": "^2.0.0",
+    "mdast-util-to-string": "^4.0.0",
     "unified": "^11.0.5"
   }
 }
