Add mandala docs sync and update mandalas page
Introduces a CI step and a shell script to sync mandala-related markdown docs into the app-web content directory. Updates mandalas page logic and homepage links to support new docs (mandala-agents-condensado, mandala-pesquisa). Adds two new condensed documentation files for mandala agents and mandala research.

--- a/.github/workflows/ci-portal.yml
+++ b/.github/workflows/ci-portal.yml
@@ -10,6 +10,10 @@ jobs:
         with: { node-version: '20' }
       - name: Install deps (app-web)
         run: npm ci --workspace apps/app-web || true
+      - name: Copy portal docs into app content
+        run: |
+          mkdir -p apps/app-web/content/core
+          rsync -a --include 'mandala-*.md' --exclude '*' docs/ apps/app-web/content/core/ || true
       - name: Build (app-web)
         run: npm run build --workspace apps/app-web || true
       - name: Audit dependencies (npm audit)
