--- a/apps/app-web/package.json
+++ b/apps/app-web/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "echo dev placeholder",
-    "build": "echo build placeholder",
-    "start": "echo start placeholder"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "remark": "^15.0.1",
@@ -17,6 +17,16 @@
     "remark-slug": "^7.0.1",
     "github-slugger": "^2.0.0",
     "mdast-util-to-string": "^4.0.0",
-    "unified": "^11.0.5"
+    "unified": "^11.0.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.0",
+    "typescript": "^5.5.4",
+    "vite": "^5.4.1"
   }
 }
