Add Prettier and ESLint configuration to app-web
Introduces Prettier and ESLint setup for apps/app-web, including config files and related devDependencies. Adds formatting and linting scripts to both app-web and root package.json for improved code quality and consistency.

--- a/apps/app-web/package.json
+++ b/apps/app-web/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint 'src/**/*.{ts,tsx}'",
+    "format": "prettier -w 'src/**/*.{ts,tsx,css,md}'",
+    "format:check": "prettier -c 'src/**/*.{ts,tsx,css,md}'"
   },
   "dependencies": {
     "remark": "^15.0.1",
@@ -23,6 +26,14 @@
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
+    "eslint": "^9.9.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "@typescript-eslint/parser": "^8.6.0",
+    "@typescript-eslint/eslint-plugin": "^8.6.0",
+    "prettier": "^3.3.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.0",
