chore: rename project to lichtara-portal and update workspaces
- Changed project name from "portal" to "lichtara-portal".
- Updated workspaces to include all apps and services.
- Added engines field to specify Node.js and npm version requirements.
- Set package manager to npm@10.
- Created .npmrc file with default configurations.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
-  "name": "portal",
+  "name": "lichtara-portal",
   "private": true,
   "workspaces": [
-    "apps/app-web"
+    "apps/*",
+    "services/*"
   ],
+  "engines": {
+    "node": ">=18.18 <=22",
+    "npm": ">=9"
+  },
+  "packageManager": "npm@10",
   "scripts": {
     "build": "npm run build -w apps/app-web",
     "lint": "npm run lint -w apps/app-web",
