feat(app-web): add Sentry SDK + Vite plugin\n\n- @sentry/react for runtime error & performance monitoring\n- @sentry/vite-plugin with sourcemaps upload\n- sentry.client init with React Router v6 integration\n- CI env vars for org/project/release and token\n- build with sourcemaps

--- a/.github/workflows/ci-portal.yml
+++ b/.github/workflows/ci-portal.yml
@@ -3,6 +3,11 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      SENTRY_ORG: lichtara
+      SENTRY_PROJECT: app-web
+      SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+      SENTRY_RELEASE: ${{ github.sha }}
     steps:
       - uses: actions/checkout@v4
       - name: Node
