--- a/apps/app-web/package.json
+++ b/apps/app-web/package.json
@@ -12,31 +12,33 @@
     "format:check": "prettier -c 'src/**/*.{ts,tsx,css,md}'"
   },
   "dependencies": {
+    "@sentry/react": "^8.55.0",
+    "github-slugger": "^2.0.0",
+    "mdast-util-to-string": "^4.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1",
+    "rehype-sanitize": "^6.0.0",
+    "rehype-stringify": "^10.0.0",
     "remark": "^15.0.1",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.0",
-    "rehype-stringify": "^10.0.0",
-    "rehype-sanitize": "^6.0.0",
     "remark-slug": "^7.0.1",
-    "github-slugger": "^2.0.0",
-    "mdast-util-to-string": "^4.0.0",
-    "unified": "^11.0.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "unified": "^11.0.5"
   },
   "devDependencies": {
+    "@sentry/vite-plugin": "^2.23.1",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "@vitejs/plugin-react": "^4.3.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "@typescript-eslint/parser": "^7.18.0",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
     "prettier": "^3.3.3",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.0",
     "typescript": "^5.5.4",
     "vite": "^5.4.1"
   }
