Add @sentry/browser v10.9.0 to dependencies
Added @sentry/browser version 10.9.0 to the project dependencies in package.json and updated related entries in package-lock.json for error tracking integration.

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "format": "npm run format -w apps/app-web",
     "format:check": "npm run format:check -w apps/app-web",
     "test": "echo test placeholder"
+  },
+  "dependencies": {
+    "@sentry/browser": "^10.9.0"
   }
 }
