docs(app-web): list Agents and Mandalas recursively and open nested paths\n\n- docs index groups Agents and Mandalas\n- viewer supports ?path= for nested markdown\n- CI copies docs/agents/** and mandala-*.md to app content\n- add .agentignore to skip lichtara-site-mvp\n- .npmrc: strict-ssl=true; add proxy hints\n- root devDeps: @typescript-eslint/parser + plugin for monorepo resolution

--- a/.github/workflows/ci-portal.yml
+++ b/.github/workflows/ci-portal.yml
@@ -20,7 +20,11 @@ jobs:
       - name: Copy portal docs into app content
         run: |
           mkdir -p apps/app-web/content/core
-          rsync -a --include 'mandala-*.md' --exclude '*' docs/ apps/app-web/content/core/ || true
+          rsync -a --prune-empty-dirs \
+            --include 'agents/***' \
+            --include 'mandala-*.md' \
+            --exclude '*' \
+            docs/ apps/app-web/content/core/ || true
       - name: Lint (app-web)
         run: npm run lint -w apps/app-web
       - name: Build (app-web)
