--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,6 @@
 fund=false
 audit=false
 save-exact=false
+strict-ssl=true
+# proxy=http://usuario:senha@host:porta
+# https-proxy=http://usuario:senha@host:porta
