--- a/services/syntaris-harmony/package.json
+++ b/services/syntaris-harmony/package.json
@@ -5,12 +5,15 @@
   "type": "module",
   "scripts": {
     "dev": "node --watch server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "start:otel": "node -r ./tracing.cjs server.js"
   },
   "dependencies": {
     "express": "^4.19.2",
     "pino": "^9.4.0",
-    "prom-client": "^15.1.3"
+    "prom-client": "^15.1.3",
+    "@opentelemetry/sdk-node": "^0.54.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.50.1",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.54.0"
   }
 }
-
