Add @opentelemetry/exporter-logs-otlp-http dependency
Added @opentelemetry/exporter-logs-otlp-http version ^0.203.0 to dependencies in package.json. Updated package-lock.json accordingly to include the new package and its required sub-dependencies.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test": "echo test placeholder"
   },
   "dependencies": {
+    "@opentelemetry/exporter-logs-otlp-http": "^0.203.0",
     "@sentry/browser": "^10.9.0"
   },
   "devDependencies": {
