ops(k8s): use Kustomize image override for syntaris-harmony (neutral image in manifest)\n\ndocs: reference SYNTARIS bundle + usage for service and kustomize

--- a/k8s/services/syntaris-harmony/deployment.yaml
+++ b/k8s/services/syntaris-harmony/deployment.yaml
@@ -18,8 +18,8 @@ spec:
     spec:
       containers:
         - name: syntaris-harmony
-          # Substitua pela imagem publicada deste serviço
-          image: ghcr.io/lichtara/syntaris-harmony:latest
+          # Imagem base; Kustomize reescreve via images: em kustomization.yaml
+          image: syntaris-harmony:latest
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
@@ -61,4 +61,3 @@ spec:
             limits:
               cpu: 250m
               memory: 256Mi
-
