--- a/services/syntaris-harmony/Dockerfile
+++ b/services/syntaris-harmony/Dockerfile
@@ -1,22 +1,16 @@
 # syntax=docker/dockerfile:1
-FROM node:20-alpine
-
+FROM node:20-alpine AS deps
 WORKDIR /app
+COPY package.json package-lock.json ./
+RUN if [ -f package-lock.json ]; then npm ci --omit=dev --no-audit --no-fund; else npm install --omit=dev --no-audit --no-fund; fi
 
-# Install only prod deps
-COPY package.json ./
-RUN npm install --omit=dev --no-audit --no-fund
-
-# Copy source
-COPY server.js ./
-COPY tracing.cjs ./
-
+FROM node:20-alpine AS runtime
+WORKDIR /app
 ENV NODE_ENV=production \
     PORT=3000 \
     SERVICE_NAME=syntaris-harmony
-
+COPY --from=deps /app/node_modules ./node_modules
+COPY server.js ./
+COPY tracing.cjs ./
 EXPOSE 3000
-
-# Default: start without OTel; override CMD to enable tracing if desired
 CMD ["node", "server.js"]
-
