docs+ops: add OTel secret example, optional envFrom in Deployment, and Getting Started steps

--- a/k8s/services/syntaris-harmony/deployment.yaml
+++ b/k8s/services/syntaris-harmony/deployment.yaml
@@ -43,6 +43,10 @@ spec:
               value: deployment.environment=prod
             - name: OTEL_EXPORTER_OTLP_ENDPOINT
               value: http://otel-collector:4318
+          envFrom:
+            - secretRef:
+                name: otel-auth
+                optional: true
           readinessProbe:
             httpGet:
               path: /readyz
