test(app-web): add vitest + RTL and e2e-ish test for Sentry debug button\n\nsec(sentry): scrub emails/CPF, tokens in URLs, and Authorization header; add allow/deny URL lists and sane defaults\nci: run app-web tests in CI

--- a/.github/workflows/ci-portal.yml
+++ b/.github/workflows/ci-portal.yml
@@ -36,6 +36,8 @@ jobs:
             docs/ apps/app-web/content/core/ || true
       - name: Lint (app-web)
         run: npm run lint -w apps/app-web
+      - name: Test (app-web)
+        run: npm run test -w apps/app-web
       - name: Build (app-web)
         run: npm run build -w apps/app-web
       - name: Verify Sentry release (best-effort)
