--- a/apps/app-web/package.json
+++ b/apps/app-web/package.json
@@ -8,6 +8,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "format": "prettier -w 'src/**/*.{ts,tsx,css,md}'",
     "format:check": "prettier -c 'src/**/*.{ts,tsx,css,md}'"
   },
@@ -28,6 +30,9 @@
   },
   "devDependencies": {
     "@sentry/vite-plugin": "^2.23.1",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.3.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
@@ -38,8 +43,10 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "jsdom": "^24.1.0",
     "prettier": "^3.3.3",
     "typescript": "^5.5.4",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vitest": "^1.6.0"
   }
 }
