--- a/k8s/observability/alloy/configmap.yaml
+++ b/k8s/observability/alloy/configmap.yaml
@@ -72,7 +72,7 @@ data:
           target_label: k8s_service
         - action: replace
           source_labels: [__meta_kubernetes_service_label_app_kubernetes_io_name]
-          target_label: service
+          target_label: k8s_app
         - action: replace
           source_labels: [__meta_kubernetes_pod_name]
           target_label: pod
@@ -82,4 +82,3 @@ data:
           regex: lichtara
       EOT
     }
-
