--- a/.github/workflows/deploy-syntaris.yml
+++ b/.github/workflows/deploy-syntaris.yml
@@ -11,6 +11,10 @@ on:
         description: "Image tag (default: latest)"
         required: false
         default: "latest"
+      overlay:
+        description: "Kustomize path (k8s or k8s/overlays/prod)"
+        required: false
+        default: "k8s"
 
 jobs:
   deploy:
@@ -21,9 +25,17 @@ jobs:
       NAMESPACE: ${{ github.event.inputs.namespace || 'default' }}
       IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/syntaris-harmony
       IMAGE_TAG: ${{ github.event.inputs.imageTag || 'latest' }}
+      KUSTOMIZE_PATH: ${{ github.event.inputs.overlay || 'k8s' }}
       KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
       OTLP_ENDPOINT: ${{ secrets.GRAFANA_CLOUD_OTLP_ENDPOINT }}
       GRAFANA_CLOUD_API_TOKEN: ${{ secrets.GRAFANA_CLOUD_API_TOKEN }}
+      PROMETHEUS_METRICS: ${{ vars.PROMETHEUS_METRICS }}
+      GRAFANA_CLOUD_PROM_URL: ${{ secrets.GRAFANA_CLOUD_PROM_URL }}
+      GRAFANA_CLOUD_PROM_USER: ${{ secrets.GRAFANA_CLOUD_PROM_USER }}
+      GRAFANA_CLOUD_PROM_PASS: ${{ secrets.GRAFANA_CLOUD_PROM_PASS }}
+      GRAFANA_CLOUD_LOKI_URL: ${{ secrets.GRAFANA_CLOUD_LOKI_URL }}
+      GRAFANA_CLOUD_LOKI_USER: ${{ secrets.GRAFANA_CLOUD_LOKI_USER }}
+      GRAFANA_CLOUD_LOKI_PASS: ${{ secrets.GRAFANA_CLOUD_LOKI_PASS }}
     steps:
       - uses: actions/checkout@v4
 
@@ -64,5 +76,17 @@ jobs:
 
       - name: Deploy with kustomize
         run: |
-          kubectl -n "$NAMESPACE" apply -k k8s
-
+          if [ -n "$PROMETHEUS_METRICS" ]; then
+            echo "Configuring grafana-cloud secret (Prometheus/Loki)"
+            kubectl -n "$NAMESPACE" create secret generic grafana-cloud \
+              --from-literal=GRAFANA_CLOUD_PROM_URL="${GRAFANA_CLOUD_PROM_URL:-}" \
+              --from-literal=GRAFANA_CLOUD_PROM_USER="${GRAFANA_CLOUD_PROM_USER:-}" \
+              --from-literal=GRAFANA_CLOUD_PROM_PASS="${GRAFANA_CLOUD_PROM_PASS:-}" \
+              --from-literal=GRAFANA_CLOUD_LOKI_URL="${GRAFANA_CLOUD_LOKI_URL:-}" \
+              --from-literal=GRAFANA_CLOUD_LOKI_USER="${GRAFANA_CLOUD_LOKI_USER:-}" \
+              --from-literal=GRAFANA_CLOUD_LOKI_PASS="${GRAFANA_CLOUD_LOKI_PASS:-}" \
+              --dry-run=client -o yaml | kubectl -n "$NAMESPACE" apply -f -
+          else
+            echo "PROMETHEUS_METRICS not set (vars). Skipping grafana-cloud secret."
+          fi
+          kubectl -n "$NAMESPACE" apply -k "$KUSTOMIZE_PATH"
