fix(deploy): ensure PROMETHEUS_METRICS variable fallback to lowercase version

--- a/.github/workflows/deploy-syntaris.yml
+++ b/.github/workflows/deploy-syntaris.yml
@@ -29,7 +29,7 @@ jobs:
       KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
       OTLP_ENDPOINT: ${{ secrets.GRAFANA_CLOUD_OTLP_ENDPOINT }}
       GRAFANA_CLOUD_API_TOKEN: ${{ secrets.GRAFANA_CLOUD_API_TOKEN }}
-      PROMETHEUS_METRICS: ${{ vars.PROMETHEUS_METRICS }}
+      PROMETHEUS_METRICS: ${{ vars.PROMETHEUS_METRICS || vars.prometheus_metrics }}
       GRAFANA_CLOUD_PROM_URL: ${{ secrets.GRAFANA_CLOUD_PROM_URL }}
       GRAFANA_CLOUD_PROM_USER: ${{ secrets.GRAFANA_CLOUD_PROM_USER }}
       GRAFANA_CLOUD_PROM_PASS: ${{ secrets.GRAFANA_CLOUD_PROM_PASS }}
