feat(protocolo): add ProtocoloPage with alignment functionality and integrate syntaris proxy

--- a/apps/app-web/.env.example
+++ b/apps/app-web/.env.example
@@ -7,3 +7,7 @@ VITE_SENTRY_REPLAYS_SESSION_SAMPLE_RATE=0.1
 VITE_SENTRY_REPLAYS_ON_ERROR_SAMPLE_RATE=1.0
 # Opcional: força nome de release no cliente (senão CI passa via plugin)
 # VITE_SENTRY_RELEASE=
+
+# Base URL do serviço syntaris-harmony para produção (opcional)
+# Se não definido, em dev será usado proxy local via Vite em /api/syntaris
+VITE_SYNTARIS_BASE_URL=
