Add axios dependency and VSCode config files
Added axios to project dependencies in package.json and package-lock.json. Introduced .vscode/extensions.json with a recommended extension and .vscode/settings.json specifying a Python install path.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "dependencies": {
     "@opentelemetry/exporter-logs-otlp-http": "^0.203.0",
-    "@sentry/browser": "^10.9.0"
+    "@sentry/browser": "^10.9.0",
+    "axios": "^1.11.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^7.18.0",
