Add dev workflow, secret scan, and CI RBAC configs
Introduces a GitHub Actions workflow for secret scanning using Gitleaks, a Kubernetes RBAC manifest for CI deployer, and a dev.sh script to run both app and service in development. Updates README files with quickstart and proxy instructions, and adds npm scripts for streamlined development.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "lint": "npm run lint -w apps/app-web",
     "format": "npm run format -w apps/app-web",
     "format:check": "npm run format:check -w apps/app-web",
-    "test": "echo test placeholder"
+    "test": "echo test placeholder",
+    "dev": "bash scripts/dev.sh",
+    "dev:app": "npm run dev -w apps/app-web",
+    "dev:syntaris": "npm run dev -w services/syntaris-harmony"
   },
   "dependencies": {
     "@opentelemetry/exporter-logs-otlp-http": "^0.203.0",
