Add CI improvements, secret scanning, and RBAC docs
Introduces Dependabot config, CodeQL and secret scanning workflows, and standardizes Node version via .nvmrc and package.json engines. Updates CI to use Node v20.19.4, enhances deploy workflow with environment support, and adds RBAC best practices documentation. Updates README with Node versioning and security workflow details.

--- a/.github/workflows/deploy-syntaris.yml
+++ b/.github/workflows/deploy-syntaris.yml
@@ -7,6 +7,10 @@ on:
         description: "Kubernetes namespace"
         required: false
         default: "default"
+      environment:
+        description: "GitHub Environment (dev/staging/prod)"
+        required: false
+        default: "dev"
       imageTag:
         description: "Image tag (default: latest)"
         required: false
@@ -23,10 +27,12 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment: ${{ github.event.inputs.environment || 'dev' }}
     permissions:
       contents: read
     env:
       NAMESPACE: ${{ github.event.inputs.namespace || 'default' }}
+      ENVIRONMENT: ${{ github.event.inputs.environment || 'dev' }}
       IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/syntaris-harmony
       IMAGE_TAG: ${{ github.event.inputs.imageTag || 'latest' }}
       KUSTOMIZE_PATH: ${{ github.event.inputs.overlay || 'k8s' }}
