--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   ],
   "engines": {
     "node": ">=20 <21",
-    "npm": ">=10"
+    "npm": ">=10 <12"
   },
   "packageManager": "npm@10",
   "scripts": {
