--- a/k8s/observability/alloy/secret.example.yaml
+++ b/k8s/observability/alloy/secret.example.yaml
@@ -15,6 +15,13 @@ stringData:
   GRAFANA_CLOUD_LOKI_PASS: <api-token>
 
   # Tempo (OTLP HTTP) — já usado pelo exportador de traços
-  GRAFANA_CLOUD_OTLP_ENDPOINT: https://otlp-gateway-<region>.grafana.net/otlp
-  GRAFANA_CLOUD_API_TOKEN: <api-token>
+  # Opção A (Public):
+  #  Use o gateway público e header Bearer (não usado por este template por padrão)
+  #  GRAFANA_CLOUD_OTLP_ENDPOINT: https://otlp-gateway-<region>.grafana.net/otlp
+  #  GRAFANA_CLOUD_API_TOKEN: <api-token>
 
+  # Opção B (PrivateLink recomendado):
+  #  Endpoint HTTP privado (inclui "/v1/traces") e Basic Auth
+  GRAFANA_CLOUD_TEMPO_HTTP: https://tempo-<stack>-otlp-gw.<region>.vpce.grafana.net/v1/traces
+  # Base64 de "<user>:<token>" com escopo Traces:Write (ex.: echo -n "2656969:glc_..." | base64)
+  GRAFANA_CLOUD_TEMPO_B64: <base64-user-colon-token>
