--- a/k8s/observability/alloy/secret.example.yaml
+++ b/k8s/observability/alloy/secret.example.yaml
@@ -25,3 +25,7 @@ stringData:
   GRAFANA_CLOUD_TEMPO_HTTP: https://tempo-<stack>-otlp-gw.<region>.vpce.grafana.net/v1/traces
   # Base64 de "<user>:<token>" com escopo Traces:Write (ex.: echo -n "2656969:glc_..." | base64)
   GRAFANA_CLOUD_TEMPO_B64: <base64-user-colon-token>
+
+  # Alternativa (OTLP Gateway via PrivateLink, com Bearer):
+  # Use no deploy como `OTLP_PRIV_HTTP` para apontar o exporter direto (Node SDK/serviços com OTEL)
+  # Ex.: https://prod-sa-east-1-otlp-gateway.sa-east-1.vpce.grafana.net/otlp
