Adiciona documentação detalhada dos agentes e governança
Inclui novos arquivos de documentação e conteúdo para agentes, governança, protocolos vibracionais, gestão de crises, sustentabilidade e treinamento multidimensional. Atualiza README com instrução de desenvolvimento e sincroniza índices e scripts relacionados. Essas adições expandem significativamente a base de conhecimento do projeto, detalhando processos, papéis, metodologias e integração de novos membros e tecnologias.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "packageManager": "npm@10",
   "scripts": {
+    "dev": "bash scripts/dev.sh",
     "bootstrap": "npm ci && npm ci -w apps/app-web && npm ci -w services/syntaris-harmony",
     "build": "npm run build -w apps/app-web",
     "build:all": "npm run build -w apps/app-web",
