--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -12,3 +12,7 @@ scrape_configs:
     static_configs:
       - targets: ['lumora:8000']
 
+  - job_name: 'lumora-dev'
+    metrics_path: /metrics
+    static_configs:
+      - targets: ['lumora-dev:8000']
