--- a/portal/compose.yaml
+++ b/portal/compose.yaml
@@ -1,25 +1,21 @@
 services:
-  python-lumora:
+  lumora:
     build:
-      context: ./lumora
-      dockerfile: ../lumoraDockerfile
-    container_name: python-lumora
+      # Build from the monorepo root using the canonical Dockerfile
+      context: ..
+      dockerfile: ../Dockerfile
+    container_name: lumora
     restart: unless-stopped
-    init: true
-    ports:
-      - "8000:8000"  # Expose FastAPI HTTP API
-    # env_file: ./lumora/.env  # Uncomment if .env file exists
     environment:
-      # Required for OpenAI API access (must be set at runtime)
-      # OPENAI_API_KEY: "your-openai-api-key"  # Do NOT put secrets here
-      # Optional configuration (can be set at runtime or via .env)
-      # LUMORA_MODEL: "gpt-4o-mini"
-      # LUMORA_TEMPERATURE: "0.2"
-      # LUMORA_CORS_ORIGINS: "https://seu-site.com,https://app.exemplo.com"
-    # No external dependencies detected (database, cache, etc.)
-    # If you add Prometheus or Grafana, see README for example compose additions
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - LUMORA_MODEL=${LUMORA_MODEL:-gpt-4o-mini}
+      - LUMORA_TEMPERATURE=${LUMORA_TEMPERATURE:-0.2}
+      - LUMORA_CORS_ORIGINS=${LUMORA_CORS_ORIGINS}
+    ports:
+      - "8000:8000"
+    networks:
+      - lumora-net
 
 networks:
-  default:
-    name: lumora-net
+  lumora-net:
     driver: bridge
