--- a/portal/compose.yaml
+++ b/portal/compose.yaml
@@ -3,7 +3,7 @@ services:
     build:
       # Build from the monorepo root using the canonical Dockerfile
       context: ..
-      dockerfile: ../Dockerfile
+      dockerfile: Dockerfile
     container_name: lumora
     restart: unless-stopped
     environment:
