--- a/.github/workflows/lumora-release.yml
+++ b/.github/workflows/lumora-release.yml
@@ -32,21 +32,31 @@ jobs:
       - name: Enable required APIs
         run: |
           gcloud services enable run.googleapis.com secretmanager.googleapis.com artifactregistry.googleapis.com
-      - name: Configure Docker for gcr.io
-        run: gcloud auth configure-docker --quiet
-      - name: Pull GHCR image and retag to GCR
+      - name: Configure Docker for Artifact Registry
         env:
-          GHCR_IMAGE: ghcr.io/${{ github.repository_owner }}/lumora:${{ github.sha }}
-          GCR_IMAGE: gcr.io/${{ secrets.GCP_PROJECT_ID }}/lumora:${{ github.sha }}
+          REGION: ${{ inputs.region }}
         run: |
+          REGION=${REGION:-sa-east1}
+          gcloud auth configure-docker "${REGION}-docker.pkg.dev" --quiet
+      - name: Ensure Artifact Registry repo exists
+        env:
+          REGION: ${{ inputs.region }}
+        run: |
+          REGION=${REGION:-sa-east1}
+          gcloud artifacts repositories describe lumora --location "$REGION" >/dev/null 2>&1 || \
+          gcloud artifacts repositories create lumora --repository-format=docker --location "$REGION"
+      - name: Pull GHCR image and retag to Artifact Registry
+        env:
+          REGION: ${{ inputs.region }}
+          GHCR_IMAGE: ghcr.io/${{ github.repository_owner }}/lumora:${{ github.sha }}
+        run: |
+          REGION=${REGION:-sa-east1}
+          AR_IMAGE="$REGION-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/lumora/lumora:${{ github.sha }}"
           echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-          docker pull "$GHCR_IMAGE" || {
-            echo "Image not found for SHA; building locally";
-            docker build -t "$GHCR_IMAGE" .;
-          }
-          docker tag "$GHCR_IMAGE" "$GCR_IMAGE"
-          docker push "$GCR_IMAGE"
-          echo "GCR_IMAGE=$GCR_IMAGE" >> $GITHUB_ENV
+          docker pull "$GHCR_IMAGE" || { echo "Image not found for SHA; building"; docker build -t "$GHCR_IMAGE" .; }
+          docker tag "$GHCR_IMAGE" "$AR_IMAGE"
+          docker push "$AR_IMAGE"
+          echo "AR_IMAGE=$AR_IMAGE" >> $GITHUB_ENV
       - name: (Optional) Sync OPENAI_API_KEY to Secret Manager
         if: ${{ secrets.GCP_SYNC_SECRETS == 'true' && secrets.OPENAI_API_KEY != '' }}
         env:
@@ -62,10 +72,9 @@ jobs:
           REGION=${REGION:-sa-east1}
           SERVICE_NAME=${SERVICE_NAME:-lumora}
           gcloud run deploy "$SERVICE_NAME" \
-            --image "${{ env.GCR_IMAGE }}" \
+            --image "${{ env.AR_IMAGE }}" \
             --platform managed \
             --region "$REGION" \
             --allow-unauthenticated \
             --set-secrets OPENAI_API_KEY=OPENAI_API_KEY:latest \
             --set-env-vars LUMORA_MODEL=${{ secrets.LUMORA_MODEL || 'gpt-4o-mini' }},LUMORA_TEMPERATURE=${{ secrets.LUMORA_TEMPERATURE || '0.2' }}
-
