--- a/.github/workflows/lumora-release.yml
+++ b/.github/workflows/lumora-release.yml
@@ -15,16 +15,18 @@ on:
 permissions:
   contents: read
   packages: read
+  id-token: write
 
 jobs:
   release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Auth GCP
+      - name: Auth GCP (OIDC)
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          workload_identity_provider: projects/${{ vars.GCP_PROJECT_NUMBER }}/locations/global/workloadIdentityPools/github/providers/github-provider
+          service_account: lumora-deployer@lichtara-os.iam.gserviceaccount.com
       - name: Setup gcloud
         uses: google-github-actions/setup-gcloud@v2
         with:
